
You can now use "auto" as a meter driver.
Wmbusmeters will then pick the right driver when
the first telegram arrives. A warning will be printed
in the logs if no driver could be found.

If you do not specify a type= in the meter config file,
then it will default to auto.

Version 1.2.0: 2021-03-07

IMPORTANT CHANGES THAT MIGHT AFFECT YOU!vvvvvvvvvvvvvvvvvvvvvv

wmbusmeters now expects the latest version of rtl_wmbus with -s support.
The default behaviour is to use -s to listen to S1,T1 and C1 at the same time.
Check the README for more info.

^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Rattinca helped add support for the EI Electronics smoke detector. Thanks Rattinca!

Ignore duplicates is now enabled by default. Turn it off with --ignoreduplicates=false

Fixed problem with state maintaining meter drivers and wildcard ids.
A HCA driver was producing telegrams with values that jumped up and down.
This was due to the fact that the meter state in the driver was updated
through multiple different telegrams (this is how the meter works).
Clearly a single state object could not properly maintain the state for all
possible meters matching the wildcard, the state became a random mix
of whater telegrams arrived.

The fix now, is that a meter C++ object for a uniqe id (not wildcard)
is created only when the first telegram arrives that matches the wildcard.
Thus each meter will have its own C++ object, in which the correct state
is maintained.

Version 1.1.0: 2021-02-20

Vincent Privat added code for properly decoding several types of izar meter.
He also added full support for the heat meter sharky 775!
Thanks Vincent!

IMPORTANT CHANGES THAT MIGHT AFFECT YOU!vvvvvvvvvvvvvvvvvvvvvv

Important! Since the new code decodes the correct meter id from the izar
telegrams, therefore your current izar meter setup will break! You have
to update your meter files with the new id. The id is still not
the id that is printed on the meter. However, the numbers that are