@@ -45,7 +45,7 @@ mqtt_publish) sent to a REST API (eg curl) or store it in a database
 
 \fB\--listento=\fR<mode>,<mode> listen to more than one link mode at the same time, assuming the dongle supports it.
 
-\fB\--logtimestamps=\fR<when> add timestamps to log entries: never always important.
+\fB\--logtimestamps=\fR<when> add timestamps to log entries: never/always/important.
 
 \fB\--c1 --t1 --s1 --s1m --n1a ... --n1f\fR listen to c1,t1,s1,s1m,n1a-n1f telegrams.
 
